infrastructure/traefik/traefik-forward-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: traefik-forward-auth
    app.kubernetes.io/name: traefik-forward-auth
    app.kubernetes.io/version: v3.1.0
  name: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: traefik-forward-auth
      app.kubernetes.io/name: traefik-forward-auth
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: traefik-forward-auth
        app.kubernetes.io/name: traefik-forward-auth
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccountName: traefik-forward-auth-serviceaccount
      containers:
        - image: mesosphere/traefik-forward-auth:3.1.0
          imagePullPolicy: IfNotPresent
          name: traefik-forward-auth
          ports:
            - containerPort: 4181
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "5m"
              memory: "10Mi"
            limits:
              cpu: "10m"
              memory: "20Mi"
