infrastructure/traefik/traefik-forward-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
spec:
  ports:
    - name: auth-http
      port: 4181
      targetPort: http
  selector:
    app.kubernetes.io/instance: traefik-forward-auth
    app.kubernetes.io/name: traefik-forward-auth
  type: ClusterIP
